# Gaylgbt

./: .gitignore  CMakeLists.txt  README.md  build_output.txt  customers.txt  employees.txt  invoices.txt  main.cpp  rooms.txt
data/: accounts.txt  customers.txt  employees.txt  invoices.txt  rooms.txt
src/manager/: HotelManager.cpp  HotelManager.h
src/manager/AuthManager/: AuthManager.cpp  AuthManager.h
src/manager/menus/CustomerMenu/: CustomerMenu.cpp  CustomerMenu.h
src/manager/menus/EmployeeMenu/: EmployeeMenu.cpp  EmployeeMenu.h
src/manager/menus/InvoiceMenu/: InvoiceMenu.cpp  InvoiceMenu.h
src/manager/menus/RoomMenu/: RoomMenu.cpp  RoomMenu.h
src/manager/menus/SearchMenu/: SearchMenu.cpp  SearchMenu.h
src/manager/menus/StatsMenu/: StatsMenu.cpp  StatsMenu.h
src/models/Account/: Account.cpp  Account.h
src/models/Customer/: Customer.cpp  Customer.h
src/models/Employee/: Employee.cpp  Employee.h
src/models/Invoice/: Invoice.cpp  Invoice.h
src/models/Person/: Person.cpp  Person.h
src/models/Room/: Room.cpp  Room.h
src/utils/DateUtils/: DateUtils.cpp  DateUtils.h
src/utils/StringUtils/: StringUtils.cpp  StringUtils.h
